tests/compile_fail/unknown_attr_args.stderr
error: Unrecognized arguments - attribute had arguments [c, d] but function takes arguments: [a, b]
 --> $DIR/unknown_attr_args.rs:3:1
  |
3 | #[named(defaults(c = false, d = false))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
